# kubectxext

./: .gitignore  .goreleaser.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  repositories.bzl
.github/workflows/: release.yaml
cmd/: BUILD.bazel  main.go
cmd/kubectxext/: BUILD.bazel
internal/configutil/: BUILD.bazel  config.go
internal/splitter/: BUILD.bazel  splitter.go
internal/tui/: BUILD.bazel  select.go
sample/: config
scripts/: tag-version.sh
