load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jotadrilo/kubectxext/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/configutil:go_default_library",
        "//internal/splitter:go_default_library",
        "//internal/tui:go_default_library",
        "@com_github_juju_errors//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
