load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kubectxext_lib",
    srcs = ["main.go"],
    importpath = "github.com/jotadrilo/kubectxext/cmd/kubectxext",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/configutil",
        "//internal/splitter",
        "//internal/tui",
        "@com_github_juju_errors//:errors",
    ],
)

go_binary(
    name = "kubectxext",
    embed = [":kubectxext_lib"],
    visibility = ["//visibility:public"],
)
