load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/jotadrilo/jsonnet-gazelle/internal/configutil",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_juju_errors//:go_default_library",
        "@io_k8s_client_go//tools/clientcmd/api/v1:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)
