load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "configutil",
    srcs = ["config.go"],
    importpath = "github.com/jotadrilo/kubectxext/internal/configutil",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_juju_errors//:errors",
        "@io_k8s_client_go//tools/clientcmd/api/v1:api",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)
